--- a/src/Topshelf.Log4Net/Topshelf.Log4Net.csproj
+++ b/src/Topshelf.Log4Net/Topshelf.Log4Net.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452</TargetFrameworks>
+    <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <SignAssembly>true</SignAssembly>
     <DebugType>portable</DebugType>
